web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web
  labels:
    app.kubernetes.io/name: web-service
spec:
  selector:
    app.kubernetes.io/name: web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
    - protocol: TCP
      port: 9090
      targetPort: http-management
      name: http-management
  type: ClusterIP
