web/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: web
  namespace: web
spec:
  host: web.web.svc.cluster.local
  subsets:
    - name: v1
      labels:
        app.kubernetes.io/version: v1
